--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/02/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 15)</b><br>Region of origin: <b>Ethiopia</b><br>Cause of death: <b>died of dehydration in hospital in Vibo Valentia (IT) after being rescued from ship with 600 people</b><br>Source: Lametino/IOM/ANSA<br>
+Found dead: <b>02/02/97</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>stowaways, bodies found in Pasaia (ES) on Cypriot ship named "Deike"</b><br>Source: taz/DPA/ST<br>
 
 <br>
 
