--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>02/12/06</b><br>Number of person: <b>102</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned in shipwreck due to stormy weather near Dakar (SN)</b><br>Source: PR<br>
+Found dead: <b>07/03/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Tatiana Serykh (woman, ±40)</b><br>Region of origin: <b>Russia</b><br>Cause of death: <b>suicide, jumped with family from 15th floor of building in Glasgow (GB) after asylum claim was rejected</b><br>Source: GuardianUn./IRR/TheHerald/MNS/Migreurop/Indep.<br>
 
 <br>
 
