--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/07/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died in the Mediterranean Sea while trying to reach Italy from North Africa</b><br>Source: Watch TheMed<br>
+Found dead: <b>02/05/14</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after boat sprung a leak in the Mediterranean Sea near coast of Libya; 80 rescued</b><br>Source: MT/GuardianUn.<br>
 
 <br>
 
