--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/04/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Asia</b><br>Cause of death: <b>jumped from boat into sea to avoid Spanish Guardia Civil (ES)</b><br>Source: MC<br>
+Found dead: <b>10/06/01</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>drowned after dinghy carrying migrants sank near Trani (IT)</b><br>Source: IRR/Vita/TL/LS<br>
 
 <br>
 
