--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/09/04</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>drowned after boat capsized off Greek coast near Samos (GR)</b><br>Source: PICUM<br>
+Found dead: <b>06/11/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Abdelkader H. (man, 19)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>jumped in the Bilbao River (ES) while escaping from policemen who mistook him for a thief</b><br>Source: EP<br>
 
 <br>
 
