--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/11/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Abdelkader H. (man, 19)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>jumped in the Bilbao River (ES) while escaping from policemen who mistook him for a thief</b><br>Source: EP<br>
+Found dead: <b>12/05/14</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after boat carrying 400 migrants sank off coast of Libya while travelling to Italy</b><br>Source: BBC/LR/VK/DN/Aljazeera/Ya.N/UNHCR<br>
 
 <br>
 
