--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/05/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>suicide, hanged himself after arrest in Soto del Real (ES)</b><br>Source: MUGAK<br>
+Found dead: <b>28/12/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 33)</b><br>Region of origin: <b>Cameroon</b><br>Cause of death: <b>stowaway, crushed by cargo of truck he was hiding in whilst travelling from the Spanish enclave of Ceuta (ES)</b><br>Source: MUGAK/ELM<br>
 
 <br>
 
