--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/07/06</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (3 men)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>died of dehydration in the Mediterranean Sea, found when boat arrived in Tenerife (ES)</b><br>Source: PICUM/MNS/ST/FE/EP/NOB/APDHA/jW<br>
+Found dead: <b>10/01/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Herbert Gabbidon (man, 68)</b><br>Region of origin: <b>Jamaica</b><br>Cause of death: <b>died in police custody in Walsall (GB) as efforts were being made to deport him</b><br>Source: NCADC<br>
 
 <br>
 
