--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/05/00</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Afghanistan, Bangladesh</b><br>Cause of death: <b>shot by Turkish border police while trying to cross Turkish-Iranian border illegally</b><br>Source: taz/DPA/AFP<br>
+Found dead: <b>24/08/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (young man)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>shot by Turkish border guards at unspecified location near Syrian-Turkish border; wife and child injured</b><br>Source: SOHR/IOM<br>
 
 <br>
 
