--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/04/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Alpha Pam (man, 28)</b><br>Region of origin: <b>Senegal</b><br>Cause of death: <b>died of tuberculosis after being denied medical care in Mallorca (ES)</b><br>Source: IBT/MNS/TL<br>
+Found dead: <b>04/09/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Sellaiah Subathira</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>missing, reportedly drowned in the Neisse River near Zasieki (PL) close to Polish-German border</b><br>Source: ARI/Morgengr./ZAG<br>
 
 <br>
 
