--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/11/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Huseyin Maden (man, 40)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>found dead on beach of Lesbos (GR); was teacher fleeing persecution in Turkey</b><br>Source: GulfToday/RTBF/TurkeyPurge<br>
+Found dead: <b>14/08/07</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stowaways, died after truck carrying 34 migrants crashed near Yukari Bakracli (TR)</b><br>Source: Anatolian<br>
 
 <br>
 
