--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/09/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Vasiliy Todchuk (man, 24)</b><br>Region of origin: <b>Russia</b><br>Cause of death: <b>suicide, hanged himself at building site in Govan, Glasgow (GB)</b><br>Source: NCADC/IRR<br>
+Found dead: <b>12/03/05</b><br>Number of person: <b>30</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>found dead near Laayoune (EH)</b><br>Source: AFVIC/APDHA<br>
 
 <br>
 
