--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/10/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 23)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>suicide, hanged himself in his cell at detention centre in Modena (IT)</b><br>Source: MP/INDi/ASGI/GLOPRO<br>
+Found dead: <b>29/08/00</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N. (3 children; 4 men)</b><br>Region of origin: <b>Iran</b><br>Cause of death: <b>drowned in the Sava River on Bosnian-Hungarian border while trying to enter Europe</b><br>Source: MNS/AFP/taz/IFIR<br>
 
 <br>
 
