--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>13/04/17</b><br>Number of person: <b>97</b><br>Name, gender, age: <b>N.N. (5 children; 15 women)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>missing after boat sank off Tripoli (LY); 23 survivors</b><br>Source: Metro/WorldBul/VOA<br>
+Found dead: <b>14/03/08</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Palestine</b><br>Cause of death: <b>4 drowned during shipwreck caused by strong winds near the village of Kale (TR); 3 survivors</b><br>Source: TP/NOB<br>
 
 <br>
 
