--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Jan 17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>died of hypothermia in the mountains near Turkish-Bulgarian border</b><br>Source: Independent<br>
+Found dead: <b>06/07/98</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned while trying to swim across the River Tresa from Italy to Switzerland</b><br>Source: NZZ<br>
 
 <br>
 
