--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/07/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Nguyen Thi Nga (woman, 34)</b><br>Region of origin: <b>Vietnam</b><br>Cause of death: <b>jumped from window of refugee centre in Mespelbrunn (DE) out of fear of deportation</b><br>Source: ARI<br>
+Found dead: <b>16/09/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Raheemullah Oryakhel (boy, 14)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>found dead near Port of Calais (FR), was travelling alone from Afghanistan to Great Britain</b><br>Source: GuardianUn./VoixDuNord<br>
 
 <br>
 
