--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Apr 08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Shirazi Abdullah Juma (man)</b><br>Region of origin: <b>Tanzania</b><br>Cause of death: <b>suicide, set himself on fire in detention centre in Luxembourg</b><br>Source: ASTI<br>
+Found dead: <b>02/11/16</b><br>Number of person: <b>128</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly missing after rubber dinghy capsized off Libya while travelling to Italy</b><br>Source: IOM<br>
 
 <br>
 
