--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/11/00</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>Bangladesh</b><br>Cause of death: <b>shot by Turkish border guards while trying to enter Turkey from Iran without legal permission</b><br>Source: MNS<br>
+Found dead: <b>29/10/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Arman A. (boy, 2)</b><br>Region of origin: <b>Armenia</b><br>Cause of death: <b>died in a fire at refugee centre in Hamburg (DE)</b><br>Source: ARI<br>
 
 <br>
 
