--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/10/11</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Iran</b><br>Cause of death: <b>died when smugglers' car overturned on way from Komotini to Kavala (GR) while avoiding police</b><br>Source: MNS<br>
+Found dead: <b>Feb 15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Shadi Omar Khataf (man)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>washed up on shore of Farsund (NO) months after attempting to swim from France to Great Britain</b><br>Source: IBTimes/MNS<br>
 
 <br>
 
