--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Feb 15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Shadi Omar Khataf (man)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>washed up on shore of Farsund (NO) months after attempting to swim from France to Great Britain</b><br>Source: IBTimes/MNS<br>
+Found dead: <b>20/10/98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Irini P. (woman, 20)</b><br>Region of origin: <b>Belarus</b><br>Cause of death: <b>suicide, in Thessaloniki (GR) after being forced to work as a prostitute</b><br>Source: MNS<br>
 
 <br>
 
