--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/09/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned, body found on beach near Balerma (ES)</b><br>Source: HOY<br>
+Found dead: <b>27/05/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mir Abbas Safari (man, 36)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>suicide, after 67 days in detention centre in Gävle (SE) out of fear of deportation</b><br>Source: IRR/UPP/NewsD<br>
 
 <br>
 
