--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/10/16</b><br>Number of person: <b>29</b><br>Name, gender, age: <b>N.N. (19 women; 10 men)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>crushed to death in boat carrying over 1,000 passengers from Libya to Italy</b><br>Source: NYtimes<br>
+Found dead: <b>Aug 15</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died in accident in vehicle while being transported through Ayvalik (TR); 30 injured</b><br>Source: Imkander<br>
 
 <br>
 
