--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>14/12/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (±19)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>drowned after boat carrying 17 people sank off coast of Samos (GR)</b><br>Source: MNS/NOB<br>
+Found dead: <b>22/05/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly missing after boat sank off coast of Malta</b><br>Source: ANSA/LS<br>
 
 <br>
 
