--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/06/17</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, bodies recovered in Tajoura, east of Tripoli (LY)</b><br>Source: IOM Libya<br>
+Found dead: <b>13/11/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 11)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>suicide, in refugee centre in Baden (AT); his confused 23-year-old brother had to look afer him and 5 siblings</b><br>Source: ORF/Heute/DerStandard<br>
 
 <br>
 
