--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>08/12/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Yuksel Ucaroglu (man, 26)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>stowaway, suffocated in cargo container travelling to Ireland from Belgium</b><br>Source: AFP/VK/SZ/MET/AP/NCADC/MNS/RTE/KO/MN<br>
+Found dead: <b>05/11/16</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N. (2 children)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died off coast of Libya in the Strait of Siciliy while trying to reach Italy</b><br>Source: TheHuff/ANSA/LR/STAMPA<br>
 
 <br>
 
