--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/12/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 15)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>hit by truck on ring road leading to Port of Calais (FR)</b><br>Source: VoixDuNord/L'Express<br>
+Found dead: <b>30/08/17</b><br>Number of person: <b>120</b><br>Name, gender, age: <b>N.N. (25 women; 95 men)</b><br>Region of origin: <b>Nigeria, unknown</b><br>Cause of death: <b>missing in shipwreck off coast of Ben Gardane (TN) on way from Zuwara (LY) to Italy; 1 survivor</b><br>Source: IOM Tunisia/AA<br>
 
 <br>
 
