--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/09/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 26)</b><br>Region of origin: <b>Sudan</b><br>Cause of death: <b>drowned in canal in the centre of Calais (FR)</b><br>Source: CMS<br>
+Found dead: <b>Feb 00</b><br>Number of person: <b>15</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>missing, reportedly drowned after small boat capsized near Laayoune (EH)</b><br>Source: MUGAK<br>
 
 <br>
 
