--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/03/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 19)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stabbed to death in fight in refugee hostel in Lindesberg (SE)</b><br>Source: AFP/DailyStar<br>
+Found dead: <b>29/08/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Arkadiusz Jóźwik (man, 40)</b><br>Region of origin: <b>Poland</b><br>Cause of death: <b>attacked in the street by teens who heard him speaking Polish, died in hospital in Cambridge (GB)</b><br>Source: GuardianUn.<br>
 
 <br>
 
