--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/01/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hasan Kalkan (boy, 15)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>shot by border police while trying to cross Iranian-Turkish border</b><br>Source: HRFT<br>
+Found dead: <b>03/10/04</b><br>Number of person: <b>22</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>drowned after boat capsized 170 km off Tunisia</b><br>Source: ANA/CDS/MT/Vivre/MUGAK/StW./MNS/SFGate<br>
 
 <br>
 
