--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/11/93</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 2)</b><br>Region of origin: <b>Yugoslavia</b><br>Cause of death: <b>died of toxic fumes during a fire at asylum centre in Bad Waldsee (DE)</b><br>Source: ARI/ZAG<br>
+Found dead: <b>01/04/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Safi Siyap (girl, 1)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died during rescue operation on the Aegean Sea while trying to reach Lesbos (GR)</b><br>Source: CNN<br>
 
 <br>
 
