--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/08/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 33)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died during a fight with another migrant at asylum centre in Harlingen (NL)</b><br>Source: Trouw/VK/PLi<br>
+Found dead: <b>13/09/07</b><br>Number of person: <b>8</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Egypt</b><br>Cause of death: <b>drowned after ship capsized off coast of Edko (EG) while travelling to Italy</b><br>Source: IntHeraldTribune<br>
 
 <br>
 
