--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/01/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Sylvio Bruno C. Amossou (man, 27)</b><br>Region of origin: <b>Togo</b><br>Cause of death: <b>died in arson attack on refugee hostel in Lübeck (DE)</b><br>Source: IRR/Independent/BAIN news/ZAG<br>
+Found dead: <b>08/12/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Imam Guler (boy, 9)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>stowaway, suffocated in cargo container travelling to Ireland from Belgium</b><br>Source: AFP/VK/SZ/MET/AP/NCADC/MNS/RTE/KO/MN<br>
 
 <br>
 
