--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/07/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Ivory Coast</b><br>Cause of death: <b>died during police operation to evict migrants from Boukhalef (MA)</b><br>Source: RFI/PICUM<br>
+Found dead: <b>1998</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 20)</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>reportedly suffocated near Almería (ES) while stowed away in truck</b><br>Source: SOS Racismo<br>
 
 <br>
 
