--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>1998</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 20)</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>reportedly suffocated near Almería (ES) while stowed away in truck</b><br>Source: SOS Racismo<br>
+Found dead: <b>13/08/07</b><br>Number of person: <b>17</b><br>Name, gender, age: <b>N.N. (8 children; 9 adults)</b><br>Region of origin: <b>Comoros</b><br>Cause of death: <b>drowned after boat sank in the Indian Ocean near Mayotte (FR) after leaving Comoros Islands (KM)</b><br>Source: Le Monde<br>
 
 <br>
 
