--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>17/01/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Igor Horvat</b><br>Region of origin: <b>Bosnia</b><br>Cause of death: <b>suicide, hanged himself at the Den Bosch Prison (NL)</b><br>Source: Dk<br>
+Found dead: <b>28/10/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (child)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing after boat capsized near Samos (GR)</b><br>Source: IOM/UNHCR<br>
 
 <br>
 
