--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>27/10/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned in the Neisse River near Görlitz while reportedly trying to cross Polish-German border</b><br>Source: German Government/ZAG<br>
+Found dead: <b>12/08/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found dead floating near Almería (ES), reportedly trying to reach Spain</b><br>Source: MNS<br>
 
 <br>
 
