--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>24/10/07</b><br>Number of person: <b>57</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Mali, Guinea, Africa</b><br>Cause of death: <b>bodies found on boat trying to reach Spain from Cape Verde; 50 missing</b><br>Source: Icare/EFE/EP/EPress/Le Soleil/AFVIC/MUGAK/Taz<br>
+Found dead: <b>23/11/17</b><br>Number of person: <b>20</b><br>Name, gender, age: <b>N.N</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned in shipwreck in the Mediterranean Sea</b><br>Source: IOM/MSF/Proactiva/UNHCR<br>
 
 <br>
 
